# k4k

./: .gitignore  CLAUDE.md  LICENSE  README.md  SESSION_STATE.md  WALKTHROUGH.md  dune-project  k4k.opam
.github/workflows/: ci.yml
editors/emacs/: README.md  k4k-mode.el
examples/backends/claude-code/: README.md  dune  main.ml  smoke.sh
examples/backends/ollama/: README.md  dune  main.ml
examples/scenarios/echo-tiny/: README.md  echo-tiny.k4k
examples/verifiers/dune-ocaml/: README.md  dune  main.ml
k4kspec/: README.md
k4kspec/backend/: .gitignore  Kalgebra.v  PLAN.md
k4kspec/backend/poc/: compose_sort.v  grepf_compositional.v  main_upper.ml  upper.v
k4kspec/examples/: bsort.k4kspec  catf.k4kspec  cutf.k4kspec  greet.k4kspec  grepf.k4kspec  grepsort.k4kspec  kvget.k4kspec  partition.k4kspec  upper.k4kspec  usort.k4kspec
k4kspec/lib/: agent_proof.ml  algebra.ml  ast.ml  certificate.ml  certify.ml  check.ml  decisions.ml  dune  eval.ml  parse.ml  propose.ml  record.ml  refdiff.ml  rocq_emit.ml  sign.ml  specs.ml  store.ml
k4kspec/test/: dune  test_k4kspec.ml
kb/: GLOSSARY.md  INDEX.md  NOTES.md  claude-code-report.md  opencode.md  plan-publication-rework.md  plan.md  questions-round2.md  questions-round3.md  questions-round4.md  questions-round5.md
kb/architecture/: overview.md
kb/architecture/decisions/: INDEX.md  adr-001-ocaml-dune.md  adr-002-interaction-file-format.md  adr-003-pluggable-backend.md  adr-004-verifier-extension.md  adr-005-canonical-ast.md  adr-006-two-layer-kb.md  adr-007-deterministic-kb-regen.md  adr-008-verifier-protocol.md  adr-009-backend-protocol.md  adr-010-cotype-delegation.md  adr-011-autonomous-agent-ux.md  adr-012-agent-driven-toolchain.md  adr-013-version-as-git-branch.md  adr-014-certification-propose-review.md  adr-015-k4kspec-language.md  adr-016-v1-verification-model.md  adr-017-guidance-document.md  adr-018-realized-v1-certify-backend.md  adr-019-agent-proof-backend.md  adr-020-structured-proof-methodology.md  adr-021-compositional-certification.md  adr-022-v3-product-surface.md
kb/archive/v0-drifted/: README.md  audit-step4-2026-05-02-axis1.md  audit-step4-2026-05-02-axis3.md  audit-step4-2026-05-02-axis5.md  audit-step4-2026-05-02-axis6.md  audit-step4-2026-05-02-axis7.md  echo-upper-v0.k4k  questions-round1.md  (+1 more)
kb/conventions/: code-style.md  context-economy.md  error-handling.md  testing-strategy.md
kb/domain/: prd.md
kb/indexes/: by-task.md
kb/properties/: INDEX.md  edge-cases.md  functional.md  non-functional.md
kb/reports/: agent-certified-programming-learnings.md  audit-2026-05-08-axis1-test-gap.md  audit-2026-05-08-axis2-security.md  audit-2026-05-08-axis3-performance.md  audit-2026-05-08-axis4-ux.md  audit-2026-05-08-axis5-spec-compliance.md  audit-2026-05-08-axis6-simplicity.md  audit-2026-05-08-axis7-provability.md  audit-2026-05-08-summary.md  audit-real-2026-05-02.md  audit-round1-2026-05-02.md  audit-step4-2026-05-02-axis1.md  audit-step4-2026-05-02-axis2.md  audit-step4-2026-05-02-axis4.md  dep-versions-baseline.txt  expert-panel-2026-06-19.md  plan-simulation-2026-05-02.md  sync-quiz-2026-05-02.md
kb/runbooks/: audit-checklist.md  drift-watch.md  test-environment.md
kb/spec/: INDEX.md  algorithms.md  api-contracts.md  config-and-formats.md  data-model.md  error-taxonomy.md  k4kspec.md
lib/: agent_backend.ml  audit_md.ml  audit_md.mli  backend_canned.ml  backend_canned.mli  backend_claude.ml  backend_claude.mli  backend_external.ml  backend_external.mli  backend_external_parse.ml  backend_external_parse.mli  backend_resolve.ml  backend_resolve.mli  backend_stub.ml  backend_stub.mli  budget.ml  budget.mli  canonical_json.ml  canonicalize.ml  canonicalize.mli  characterization.ml  characterization.mli  characterization_decoder.ml  characterization_json.ml  clarification.ml  clarification.mli  config.ml  config.mli  convergence.ml  convergence.mli  cotype.ml  cotype.mli  cotype_parse.ml  cotype_stub.ml  cotype_stub.mli  coverage.ml  coverage.mli  diff_extract.ml  diff_extract.mli  diff_filter.ml  (+104 more)
prompts/: formalize.md  gap-step.md  gap-step.tier-a.md  gap-step.tier-b.md  gap-step.tier-c.md  kb-regen.md
scripts/: record-dep-versions.sh
test/conformance/: dune  test_conformance.ml
test/edge/: dune  test_edge.ml
test/integration/: dune  test_integration.ml
test/unit/: dune  test_unit.ml
tests/fixtures/: canned-responses.json  echo-upper-canned.json  echo-upper.k4k  well-formed-structural.k4k
(+1 files in other folders)
