opam-version: "2.0"
name: "k4k"
version: "0.1.0"
synopsis: "KISS for KISS — deterministic harness for building POSIX CLI programs"
maintainer: "yann.regis-gianas@nomadic-labs.com"
authors: ["k4k contributors"]
license: "ISC"
homepage: "https://example.invalid/k4k"
bug-reports: "https://example.invalid/k4k/issues"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml"      {>= "5.4.0"}
  "dune"       {>= "3.22"}
  "cmdliner"   {>= "2.0"}
  "yojson"     {>= "3.0"}
  "digestif"   {>= "1.3"}
  "fmt"        {>= "0.11"}
  "astring"    {>= "0.8"}
  "fpath"      {>= "0.7"}
  "re"         {>= "1.10"}
  "alcotest"   {with-test & >= "1.9"}
  "qcheck-core" {with-test & >= "0.21"}
]
