opam-version: "2.0"
name: "k4k"
version: "0.3.0"
synopsis: "KISS for KISS — sign a spec, prove one theorem, ship a certified KISS program"
description: """
k4k is a spec-validation and certification harness for KISS programs: the
author writes and signs an observational spec in the k4kspec language; k4k
validates it (examples, stability, exhaustiveness, anti-vacuity, adversarial
sweep), elaborates it to a Rocq theorem against a blessed algebra, checks a
non-vacuous proof, extracts and compiles the program, cross-checks it against
the executable oracle, and records a certificate with its TCB manifest.

Certification requires the Rocq prover (`coqc`/`rocq`) on the PATH; it is an
external tool requirement, not an opam dependency. Agent-driven proving
(`certify-agent`) additionally needs an LLM backend via $K4K_PROOF_CMD.

k4k is experimental, part of a broader experiment on software engineering in
the agent era (https://yann.regis-gianas.org/).
"""
maintainer: "yann.regis-gianas@nomadic-labs.com"
authors: ["Yann Régis-Gianas"]
license: "MIT"
homepage: "https://github.com/yurug/k4k"
bug-reports: "https://github.com/yurug/k4k/issues"
dev-repo: "git+https://github.com/yurug/k4k.git"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml"     {>= "5.3.0"}
  "dune"      {>= "3.22"}
  "base-unix"
]
