(library
 (name k4k)
 (public_name k4k)
 (flags (:standard -w +a-4-40-41-42-44-45-48-58-59-60-66-67-68-69-70 -strict-sequence))
 (libraries unix yojson digestif digestif.c re fmt fpath astring))

(rule
 (target embedded_prompts.ml)
 (deps (:tpl ../prompts/formalize.md))
 (action
  (with-stdout-to %{target}
   (progn
    (echo "let formalize = {bake|")
    (cat %{tpl})
    (echo "|bake}\n")))))
