(library
 (name k4k)
 (public_name k4k)
 (flags (:standard -w +a-4-40-41-42-44-45-48-58-59-60-66-67-68-69-70 -strict-sequence))
 (libraries unix yojson digestif digestif.c re fmt fpath astring))

(rule
 (target embedded_prompts.ml)
 (deps (:tpl ../prompts/formalize.md) (:gs ../prompts/gap-step.md)
       (:kr ../prompts/kb-regen.md))
 (action
  (with-stdout-to %{target}
   (progn
    (echo "let formalize = {bake|")
    (cat %{tpl})
    (echo "|bake}\n")
    (echo "let gap_step = {bake|")
    (cat %{gs})
    (echo "|bake}\n")
    (echo "let kb_regen = {bake|")
    (cat %{kr})
    (echo "|bake}\n")))))
